First commit to new branch

--- a/styles.css
+++ b/styles.css
@@ -1129,7 +1129,7 @@ body {
   right: 16px;
   font-size: 15px;
   font-family: var(--font);
-  color: #ea00ff;
+  color: #f2fa89;
   letter-spacing: 1px;
   pointer-events: none;
 }
